fix display overflow when input numbers

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ html,body {
     border-radius: 5px;
     /* flex */
     flex: 2;
+    max-height: 121px;
 }
 
 #numberpad {
